--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
     "symfony/var-dumper": "^5.3"
   },
   "require": {
+    "php": "^8.1",
     "respect/validation": "^2.2",
     "psr/http-message": "^1.0"
   },
